--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,6 @@
   "dependencies": {
     "express": "^4.21.1",
     "node-fetch": "^3.3.2"
-  }
+  },
+  "type": "module"
 }
